--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <p>this website has text in here</p>
                     <button>Sign up</button>
                 </div>
-                <div class="hero-image container">
+                <div class="hero-image-container">
                     <img class="hero-image" src="./images/kramer-mind-blownjpg.jpg" alt="there is an image here">
                 </div>
             </div>
