Add images, color & style

--- a/index.html
+++ b/index.html
@@ -9,66 +9,72 @@
 
     <body>
         <div class="header">
-            <div>
-                <h3>header logo</h3>
+            <div class="logo-header">
+                <div class="logo">Kramerica Ind.</div>
             </div>
             <div class="header-links">
-                <a href="">header link one</a>
-                <a href="">header link two</a>
-                <a href="">header link three</a>
+                <a href="">ABOUT</a>
+                <a href="">WORK WITH US</a>
+                <a href="">CONTACT</a>
             </div>
         </div>
         <div class="body">
             <div class="top">
                 <div class="hero">
-                    <h1>This website is awesome</h1>
-                    <p>this website has text in here</p>
+                    <div class="hero-title">Hey Buddy</div>
+                    <p class="hero-text">Home of the Rubber Bladder System for oil tankers, The Bro, Coffee Table
+                        Book about Coffee Tables, Make It Yourself Pizza Parlor & many more!
+                    </p>
                     <button>Sign up</button>
                 </div>
                 <div class="hero-image-container">
-                    <img class="hero-image" src="./images/kramer-mind-blownjpg.jpg" alt="there is an image here">
+                    <img class="hero-image" src="./images/kramerica-croped.jpg" alt="there is an image here">
                 </div>
             </div>
             <div class="middle">
-                <h2>Some random information</h2>
+                <div class="random-information">Solving problems the Kramer way</div>
                 <div class="middle-items">
                     <div>
-                        <img src="" alt="">
-                        <p>this is some subtext</p>
+                        <img src="./images/coffe-table.gif" alt="">
+                        <p>"You know what would make a great coffee table book? A coffee table book about coffee tables!</p>
                     </div>
                     <div>
-                        <img src="" alt="">
-                        <p>this is some subtext</p>
+                        <img src="./images/capricous.gif" alt="">
+                        <p>Well, I have to say this seems capricious and arbitrary.</p>
                     </div>
                     <div>
-                        <img src="" alt="">
-                        <p>this is some subtext</p>
+                        <img src="./images/oh-yeah.gif" alt="">
+                        <p>Of course it's a good idea, it's my idea. I conceived this whole project two years ago.</p>
                     </div>
                     <div>
-                        <img src="" alt="">
-                        <p>this is some subtext</p>
+                        <img src="./images/crackers-suitcase.gif" alt="">
+                        <p>Kramerica Industries lives! Let's get back to work!</p>
                     </div>
                 </div>
             </div>
             <div class="quote">
                 <div class="text">
-                    <p class="quote-text">This is an inspiring quote.</p>
-                    <p class="quote-sign">- Kramer, CEO of Kramerica</p>
+                    <p class="quote-text">"You know Darren, if you would have told me 
+                        twenty-five years ago that some day 
+                        I'd be standing here about to solve the world's energy problems, 
+                        I would've said you're crazy... 
+                        Now let's push this giant ball of oil out the window."</p>
+                    <p class="quote-sign">- Cosmo Kramer, CEO of Kramerica</p>
                 </div>                    
             </div>
             <div class="bottom">
                 <div class="bottom-container">
                     <div class="text-container">
-                        <h3>Call to action</h3>
-                        <p>Sign-up to get all the perks</p>
+                        <div class="title">Intern Wanted!</div> 
+                        <div>Get real-world corporate experience!</div>
                     </div>
-                    <button>Sign-up</button>
+                    <button>Apply</button>
                 </div>
             </div>
 
         </div>
         <div class="footer">
-            Copyright Kramerica Industries
+            Copyright&copy; Kramerica Industries
         </div>
     </body>
 </html>
